# yichuizi

./: build.gradle  gradle.properties  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: changevoice.cpp  player.cpp  publisher.cpp  watertext.cpp
app/src/main/res/drawable/: shape_edit_bg.xml
app/src/main/res/layout/: activity_camera.xml  activity_changevoice.xml  activity_chat_layout.xml  activity_flexbox_layout.xml  activity_index.xml  activity_layout_animation.xml  activity_main.xml  activity_mfw_layout.xml  activity_recycler_layout.xml  activity_splash.xml  activity_video.xml  item_layout.xml  item_my_layout.xml  layout_item.xml  layout_mfw_item.xml  layout_tab_item.xml  (+1 more)
aptlib/: build.gradle
audiolibrary/src/main/: AndroidManifest.xml
baselibrary/: CMakeLists.txt  build.gradle
baselibrary/src/androidTest/java/com/yichuizi/baselibrary/: ExampleInstrumentedTest.java
baselibrary/src/main/: AndroidManifest.xml
baselibrary/src/main/cpp/: AndroidLog.h  pkginfo.cpp
baselibrary/src/main/java/com/yichuizi/baselibrary/: PkgInfoUtil.java
baselibrary/src/test/java/com/yichuizi/baselibrary/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
hooklibrary/: build.gradle
hooklibrary/src/main/: AndroidManifest.xml
hooklibrary/src/main/groovy/: MyPlugin.groovy
loginlibrary/: build.gradle
loginlibrary/src/main/: AndroidManifest.xml
loglibrary/: build.gradle
loglibrary/src/main/: AndroidManifest.xml
videolibrary/src/main/: AndroidManifest.xml
(+90 files in other folders)
